--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3307/branch
 spring.datasource.username=root
 spring.datasource.password=root
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+server.address=127.0.0.1
+server.port=8081
+server.servlet.context-path=/branch
